# claude-test

backend/: pyproject.toml
frontend/: app.js  index.html  styles.css
