[project]
name = "telusko-workflow-backend"
version = "0.1.0"
description = "FastAPI backend for the Telusko Workflow Engine"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.50.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
